--- a/index.html
+++ b/index.html
@@ -1,173 +1,31 @@
 <!doctype html>
 <html>
 <head>
-  <title>flarework</title>
-  <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=yes">
-  <meta name="google-site-verification" content="D8_wyHhAzCXDxsmfYYf4-ckAvCJJMpgA0Sx6lFxBfnI" />
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-24479305-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<style>
-@import url(//fonts.googleapis.com/css?family=Dosis:200);
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: "Dosis","Helvetica Neue", sans-serif;
-  font-weight: normal;
-  color: #FaFaFf;
-  font-size: 14px;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-html {
-  height: 100%;
-}
-body {
-  position: relative;
-  min-height: 100%;
-  background-color: rgba(15,45,65,1);
-  overflow: hidden;
-}
-body:after {
-  position: absolute;
-  content: '';
-  top: 1rem;
-  left: 1rem;
-  background: url(flare.svg) top left no-repeat;
-  background-size: contain;
-  width: 10rem;
-  height: 10rem;
-  z-index: 100;
-}
-.square {
-  transition: all 0.3s ease-in-out;
-  position: absolute;
-  background-color: red;
-}
-
-.level1 {
-  background-color: rgba(25,55,75,1);
-}
-.level2 {
-  background-color: rgba(35,65,85,1);
-}
-.level3 {
-  background-color: rgba(45,75,95,1);
-}
-.level4 {
-  background-color: rgba(55,85,105,1);
-}
-.level5 {
-  background-color: rgba(65,95,115,1);
-}
-.level6 {
-  background-color: rgba(75,105,125,1);
-}
-.level7 {
-  background-color: rgba(85,115,135,1);
-  background: #0e9;
-}
-.level5 + .level6 {
-  background-color: rgba(55,85,105,1);
-  border-bottom-left-radius: 50%;
-  border-top-right-radius: 50%;
-}
-.level5 + .level2 {
-  border-bottom-left-radius: 50%;
-}
-.level3 + .level2 {
-  border-bottom-left-radius: 50%;
-}
-.level6 + .level5 {
-  border-top-left-radius: 50%;
-}
-.level5 + .level6 {
-  border-bottom-left-radius: 50%;
-  background-color: rgba(55,85,105,1);
-}
-
-.level6 + .level7 {
-  border-top-right-radius: 50%;
-
-}
-.level3 + .level6 {
-  border-bottom-right-radius: 50%;
-
-}
-.level5 + .level5 {
-  border-bottom-right-radius: 50%;
-}
-
-.level4 + .level1,.level5 + .level1,.level6 + .level1 {
-  border-top-right-radius: 50%;
-}
-
-.square:hover {
-  opacity: 0.1
-}
-
-#hello {
-  width: 33%;
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
-  z-index: 9000;
-  text-align: right;
-  font-size: 2em;
-}
-hr {
-  margin: 0.5em 0;
-  animation: fadeIn 1s 600ms forwards;
-  opacity: 0;
-}
-p:first-child {
-  opacity: 0;
-  animation: fadeIn 1s 600ms forwards;
-}
-p {
-  opacity: 0;
-  animation: fadeIn 2s 2600ms forwards;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-</style>
+	<title>flarework</title>
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=yes">
+	<meta name="google-site-verification" content="D8_wyHhAzCXDxsmfYYf4-ckAvCJJMpgA0Sx6lFxBfnI" />
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div id="hello">
-	<p>This is the site of <strong>Dan Peddle</strong>, who spends way too much time playing with css.</p>
-	<hr/>
+	<p>
+        <span><strong>Dan Peddle</strong></span>
+        <span>a software developer</span>
+    </p>
+	<hr />
 	<p>> <a href="https://twitter.com/danpeddle">twitter</a></p>
 	<p>> <a href="https://codepen.io/dazld">codepen</a></p>
 	<p>> <a href="https://github.com/dazld">github</a></p>
-	<p>> <a href="https://npmjs.org/~dazld">npm</a></p>
-
 </div>
 <script type="text/javascript" src="main.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-24479305-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
 
