--- a/grid/index.html
+++ b/grid/index.html
@@ -11,6 +11,10 @@
         <header>
             hi there
         </header>
+        <h1 class="mega">Longertext</h1>
+        <figure>
+            <img src="https://picsum.photos/800/800" />
+        </figure>
         <aside>
             <span>things</span>
             <span>and</span>
