--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
+    <meta charset="UTF-8">
 	<title>flarework</title>
 	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=yes">
 	<meta name="google-site-verification" content="D8_wyHhAzCXDxsmfYYf4-ckAvCJJMpgA0Sx6lFxBfnI" />
