--- a/lines/index.html
+++ b/lines/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="stage"></canvas>
     <script src="bundle.js"></script>
 </body>
 </html>
