--- a/roman/index.html
+++ b/roman/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="main">
-        <img src="foo.svg" />
-    </div>
-    <script src="bundle.js"></script>
+  <h1><span>W</span>orking<br/> on everything<br/> and nothing</h1>
 </body>
 </html>
