--- a/kerning-webfonts/index.html
+++ b/kerning-webfonts/index.html
@@ -26,7 +26,7 @@
 	<title>Kerned HTML5 Webfonts</title>
 	<meta name="description" content="Technique for unobtrusively kerning webfonts, html5 font-face, font tracking. " />
 	<style type="text/css">
-		@import url(http://fonts.googleapis.com/css?family=Didact+Gothic&v2);
+		@import url(https://fonts.googleapis.com/css?family=Didact+Gothic&v2);
 		div, span, h1, h2, h3, form, fieldset, body, html {
 			font-family: 'Didact Gothic';
 			margin: 0;
@@ -136,7 +136,7 @@
 			padding-bottom: 30px;
 		}
 	</style>
-	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
 
 </head>
 <body>
